# VideoPlayer

./: .gitignore
app/: build.gradle
app/src/main/cpp/: ALog.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lib/: fdk-aac.7z  vo-aacenc.7z
app/src/main/cpp/lib/fdk-aac/: CMakeLists.txt
app/src/main/cpp/lib/vo-aacenc/: CMakeLists.txt
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp
app/src/main/java/com/example/videoplayer/: AssectsUtil.java  MainActivity.java  MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
